tests/mm0_mmu/fail/bad-sort2314.mmu
-- bad modifier order
(sort s2314 strict provable pure free)